[package]
name = "brainfuck-rs"
version = "0.1.0"
authors = ["Guilherme <guilherme@intruder.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.2.0"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
cursive = "0.16.3"
